css/style.css
html, body
{
	margin: 0;
	height: 100%;

	background-color: #1d1920;
	color: #f9f4d7;

	font-family: 'Open Sans', sans-serif;

	position: relative;
}

/*.photos {
    max-width:20%;
}*/

body img {
  position: absolute;
  left:0;
  transition: opacity 1s ease-in-out;
/*  max-width: 30%;
  max-height: 50%;*/
}

.poemPage
{
/*	height: 100%;*/
	width: 100%;

	position: relative;
	z-index: 3;
}

.poemTitle
{
	font-style: italic;
	z-index: 3;
}

.poemText
{
	z-index: 3;
}



.arrows
{
	font-size: 50px;
}

#sidebar
{
    top: 25%;
/*    background-color: blue;*/
	z-index: 3;
}

#sidebar ul {list-style: none}

a
{
	text-decoration: none;
	color: #fbeed5;
}

a:hover {color: #fcd884}

a:active {color: #7b404b}

.test
{
	font-size: 100px;
	background-color: blue;
	color: white;

	position: absolute;
	z-index: -1;
	width: 100%;
}

#header
{
	width: 100%;

	position: fixed;

	z-index: 10;

	top: 0;
	left: 0;

	background: #25233E;

	font-size: 60px;
	text-align: center;

	padding-left: 25px;
	padding-right: 25px;
}


/*Menu*/
#menu
{
	height: 100%;
 	
	position: fixed;

	z-index: 10;

	top: 10%;
	right: 0;
	left: 0;
	bottom: 0;

	overflow-x: hidden;

	background: #7b404b;

	font-size: 30px;
	font-weight: bold;
}

#menu a
{
	text-decoration: none;
}

#menu ul
{
	list-style: none;
}


#menu ul a
{
	text-decoration: none;
	color: #fbeed5;
}

#menu ul a:active
{
	color: #ef8a7d;
}


/*For desktop*/
@media all and (orientation:landscape)
{
	#header, #menu, #aboutTab
	{
		display: none;
	}
}




/*For mobile*/
@media all and (orientation:portrait)
{
	body
	{
		font-size: 14px;
	}

	.container
	{
		padding: 0px !important;
	}

	#sidebar, #menu, #aboutTab
	{
		display: none;
	}
}



/*	#textarea
	{
		top: 10%;
		left: 0%;

		padding: 10% 5% 10% 5%;
	}*/

/*	#poemsTab
	{
		col-12;
	}*/

}

